modified:   aserdev-os/index.html 	new file:   images/logo.jpeg 	modified:   index.html 	modified:   other-projects/index.html 	modified:   pacman-repo/index.html 	modified:   style.css

--- a/aserdev-os/index.html
+++ b/aserdev-os/index.html
@@ -65,6 +65,8 @@
 	<title>Aserdev OS Distro</title>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="../style.css">
+	<link rel="icon" href="/images/logo.jpeg" sizes="32x32">
+	<link rel="shortcut icon" href="/images/logo.jpeg">
 	<style>
 		body {
 			font-family: 'Montserrat', sans-serif;
@@ -191,6 +193,10 @@
 	</div>
 	<footer>
 		&copy; 2025 Aserdev OS
+		<div class="footer-buttons">
+			<a class="footer-button" href="/LICENSE" target="_blank">License</a>
+			<a class="footer-button" href="https://github.com/aserdevyt/aserdevyt.github.io/tree/main" target="_blank">Source Code</a>
+		</div>
 	</footer>
 	<script>
 	function toggleTheme() {
