--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<meta name="author" content="Aserdev">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="/images/logo.jpeg" sizes="32x32">
+	<link rel="shortcut icon" href="/images/logo.jpeg">
 	<style>
 		.theme-toggle {
 			position: fixed;
@@ -109,6 +111,10 @@
 			</div>
 			<footer>
 				&copy; 2025 Aserdev. All rights reserved.
+				<div class="footer-buttons">
+					<a class="footer-button" href="/LICENSE" target="_blank">License</a>
+					<a class="footer-button" href="https://github.com/aserdevyt/aserdevyt.github.io/tree/main" target="_blank">Source Code</a>
+				</div>
 			</footer>
 		<script>
 			function toggleTheme() {
