--- a/other-projects/index.html
+++ b/other-projects/index.html
@@ -60,6 +60,8 @@
 	<title>Aserdev Other Projects</title>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="../style.css">
+	<link rel="icon" href="/images/logo.jpeg" sizes="32x32">
+	<link rel="shortcut icon" href="/images/logo.jpeg">
 	<style>
 		body {
 			font-family: 'Montserrat', sans-serif;
@@ -182,6 +184,10 @@
 		window.matchMedia('(prefers-color-scheme: light)').addEventListener('change', setThemeFromPreference);
 </script>
 		&copy; 2025 Aserdev Other Projects
+	<footer>
+		&copy; 2025 Aserdev Other Projects
+		<div class="footer-buttons">
+			<a class="footer-button" href="/LICENSE" target="_blank">License</a>
+			<a class="footer-button" href="https://github.com/aserdevyt/aserdevyt.github.io/tree/main" target="_blank">Source Code</a>
+		</div>
 	</footer>
-</body>
-</html>
