--- a/pacman-repo/index.html
+++ b/pacman-repo/index.html
@@ -60,6 +60,8 @@
 	<title>Aserdev Pacman Repo</title>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="../style.css">
+	<link rel="icon" href="/images/logo.jpeg" sizes="32x32">
+	<link rel="shortcut icon" href="/images/logo.jpeg">
 	<style>
 		body {
 			font-family: 'Montserrat', sans-serif;
@@ -155,6 +157,10 @@
 	</div>
 	<footer>
 		&copy; 2025 Aserdev Pacman Repo
+		<div class="footer-buttons">
+			<a class="footer-button" href="/LICENSE" target="_blank">License</a>
+			<a class="footer-button" href="https://github.com/aserdevyt/aserdevyt.github.io/tree/main" target="_blank">Source Code</a>
+		</div>
 	</footer>
 	<script>
 	function toggleTheme() {
