--- a/other-projects/index.html
+++ b/other-projects/index.html
@@ -157,7 +157,7 @@
 			<div class="project-card">
 				<h2>brokefetch</h2>
 				<p>A minimal system info fetch tool for broke people made by Szerwigi1410.</p>
-				<a href="https://github.com/Szerwigi1410/brokefetch" target="_blank">GitHub Repo</a>
+				<a href="brokefetch.html">Details</a>
 			</div>
 			<div class="project-card">
 				<h2>ash-shell</h2>
