new file:   about.html 	modified:   aserdev-os/index.html 	modified:   index.html 	modified:   other-projects/brokefetch.html 	modified:   other-projects/index.html 	modified:   pacman-repo/index.html

--- a/aserdev-os/index.html
+++ b/aserdev-os/index.html
@@ -196,6 +196,7 @@
 		<div class="footer-buttons">
 			<a class="footer-button" href="/LICENSE" target="_blank">License</a>
 			<a class="footer-button" href="https://github.com/aserdevyt/aserdevyt.github.io/tree/main" target="_blank">Source Code</a>
+			<a class="footer-button" href="/about.html">About</a>
 		</div>
 	</footer>
 	<script>
