--- a/other-projects/brokefetch.html
+++ b/other-projects/brokefetch.html
@@ -43,8 +43,9 @@
     <footer style="margin-top:28px; padding-top:18px; border-top:1px solid rgba(255,255,255,0.04); display:flex; gap:12px; align-items:center; justify-content:space-between; flex-wrap:wrap">
       <div style="color:#cbd5e1">&copy; 2025 Aserdev</div>
       <div class="footer-buttons" style="display:flex; gap:12px;">
-        <a class="footer-button" href="/LICENSE" target="_blank">License</a>
-        <a class="footer-button" href="https://github.com/Szerwigi1410/brokefetch" target="_blank">Source Code</a>
+  <a class="footer-button" href="/LICENSE" target="_blank">License</a>
+  <a class="footer-button" href="https://github.com/Szerwigi1410/brokefetch" target="_blank">Source Code</a>
+  <a class="footer-button" href="/about.html">About</a>
       </div>
     </footer>
   </div>
