--- a/pacman-repo/index.html
+++ b/pacman-repo/index.html
@@ -156,10 +156,13 @@
 		</div>
 	</div>
 	<footer>
+		
 		&copy; 2025 Aserdev Pacman Repo
 		<div class="footer-buttons">
+			
 			<a class="footer-button" href="/LICENSE" target="_blank">License</a>
 			<a class="footer-button" href="https://github.com/aserdevyt/aserdevyt.github.io/tree/main" target="_blank">Source Code</a>
+			<a class="footer-button" href="/about.html">About</a>
 		</div>
 	</footer>
 	<script>
