modified:   aserdev-os/index.html 	modified:   other-projects/brokefetch.html 	modified:   pacman-repo/index.html

--- a/aserdev-os/index.html
+++ b/aserdev-os/index.html
@@ -169,6 +169,22 @@
 			Aserdev-OS is a minimal, fast, and customizable arch-based distribution.<br>
 			Designed for people like me who like a fast and minimal system powered by <a href="https://archlinux.org/">Arch Linux</a></a>.
 		</div>
+		<!-- Aserdev-OS GitHub Badges -->
+<div class="badges">
+  <a href="https://github.com/aserdevyt/aserdev-os" target="_blank">
+    <img src="https://img.shields.io/github/stars/aserdevyt/aserdev-os?style=for-the-badge" alt="GitHub stars">
+  </a>
+  <a href="https://github.com/aserdevyt/aserdev-os/forks" target="_blank">
+    <img src="https://img.shields.io/github/forks/aserdevyt/aserdev-os?style=for-the-badge" alt="GitHub forks">
+  </a>
+  <a href="https://github.com/aserdevyt/aserdev-os/issues" target="_blank">
+    <img src="https://img.shields.io/github/issues/aserdevyt/aserdev-os?style=for-the-badge" alt="Open issues">
+  </a>
+
+  <a href="https://github.com/aserdevyt/aserdev-os" target="_blank">
+    <img src="https://img.shields.io/github/languages/top/aserdevyt/aserdev-os?style=for-the-badge" alt="Top Language">
+  </a>
+</div>
 		<div class="images">
 			<div class="img-card">
 				<img src="screenshot1.png" alt="Screenshot 1">
