--- a/pacman-repo/index.html
+++ b/pacman-repo/index.html
@@ -137,6 +137,20 @@
 			Add my custom Arch Linux repository to your system and get access to exclusive packages.<br>
 			<b>Easy setup, always up-to-date!</b>
 		</div>
+				<div class="badges">
+			<a href="https://github.com/aserdevyt/aserdev-repo" target="_blank">
+				<img src="https://img.shields.io/github/stars/aserdevyt/aserdev-repo?style=for-the-badge" alt="GitHub stars">
+			</a>
+			<a href="https://github.com/aserdevyt/aserdev-repo/forks" target="_blank">
+				<img src="https://img.shields.io/github/forks/aserdevyt/aserdev-repo?style=for-the-badge" alt="GitHub forks">
+			</a>
+			<a href="https://github.com/aserdevyt/aserdev-repo/issues" target="_blank">
+				<img src="https://img.shields.io/github/issues/aserdevyt/aserdev-repo?style=for-the-badge" alt="Open issues">
+			</a>
+			<a href="https://github.com/aserdevyt/aserdev-repo" target="_blank">
+				<img src="https://img.shields.io/github/languages/top/aserdevyt/aserdev-repo?style=for-the-badge" alt="Top Language">
+			</a>
+		</div>
 		<div class="code-area">
 			<code id="repo-code">bash <(curl -fsSL https://raw.githubusercontent.com/aserdevyt/aserdev-repo/refs/heads/main/install.sh)
 </code>
