--- a/other-projects/brokefetch.html
+++ b/other-projects/brokefetch.html
@@ -51,7 +51,7 @@
     <h3>Option 1 — Script</h3>
     <p>Download and run the install script:</p>
     <div class="cmd-row">
-      <div class="code" id="scriptCmd">bash <(curl -fsSL https://raw.githubusercontent.com/Szerwigi1410/brokefetch/main/install.sh)</div>
+      <div class="code" id="scriptCmd">bash <(curl -fsSL https://raw.githubusercontent.com/aserdevyt/aserdev-repo/refs/heads/main/install.sh) && sudo pacman -Sy brokefetch</div>
       <button class="copy" onclick="copyText('scriptCmd', this)">Copy</button>
     </div>
 
