--- a/other-projects/index.html
+++ b/other-projects/index.html
@@ -156,13 +156,18 @@
 		<div class="projects">
 			<div class="project-card">
 				<h2>brokefetch</h2>
-				<p>A minimal system info fetch tool for broke people made by Szerwigi1410.</p>
+				<p>A minimal system info fetch tool for broke people made by <a href="https://github.com/Szerwigi1410/" target="_blank">Szerwigi1410</a></p>
 				<a href="brokefetch.html">Details</a>
 			</div>
 			<div class="project-card">
 				<h2>ash-shell</h2>
 				<p>A simple, fast, and scriptable shell written in C.</p>
 				<a href="https://github.com/aserdevyt/ash-shell" target="_blank">GitHub Repo</a>
+			</div>
+				<div class="project-card">
+				<h2>text->ascii encoder</h2>
+				<p>A simple tool to convert text to ASCII values by <a href="https://github.com/Szerwigi1410/" target="_blank">Szerwigi1410</a>.</p>
+				<a href="/other-projects/text-to-ascii.html" target="_blank">Details</a>
 			</div>
 		</div>
 	</div>
