new file:   other-projects/ash-shell/index.html 	renamed:    other-projects/brokefetch.html -> other-projects/brokefetch/index.html 	new file:   other-projects/images/ash-shell/screenshot-1.png 	new file:   other-projects/images/ash-shell/screenshot-2.png 	new file:   other-projects/images/ash-shell/screenshot-3.png 	renamed:    other-projects/images/arch.png -> other-projects/images/brokefetch/arch.png 	renamed:    other-projects/images/aserdev.png -> other-projects/images/brokefetch/aserdev.png 	renamed:    other-projects/images/debian.png -> other-projects/images/brokefetch/debian.png 	renamed:    other-projects/images/windows.png -> other-projects/images/brokefetch/windows.png 	modified:   other-projects/index.html 	renamed:    other-projects/text-to-ascii.html -> other-projects/text-to-ascii/index.html

--- a/other-projects/text-to-ascii/index.html
+++ b/other-projects/text-to-ascii/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  	<link rel="icon" href="/images/logo.jpeg" sizes="32x32">
+    	<link rel="icon" href="/images/logo.jpeg" sizes="32x32">
 	<link rel="shortcut icon" href="/images/logo.jpeg">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>brokefetch — Details</title>
-  <link rel="stylesheet" href="../style.css">
+  <title>ascii-enc — Details</title>
+  <link rel="stylesheet" href="/style.css">
   <style>
     .container { max-width:900px; margin:48px auto; padding:28px; border-radius:12px; background:rgba(30,41,59,0.85); }
     h1 { color:#38bdf8; margin-top:0 }
@@ -24,25 +24,25 @@
 </head>
 <body>
   <div class="container">
-    <a href="index.html" class="button">← Back</a>
-    <h1>brokefetch</h1>
+    <a href="/other-projects/index.html" class="button">← Back</a>
+    <h1>text to ascii encoder</h1>
     <p>Made by <a href="https://github.com/Szerwigi1410" target="_blank">Szerwigi1410</a>. 
-       <a href="https://github.com/Szerwigi1410/brokefetch" target="_blank">Source code</a></p>
+       <a href="https://github.com/Szerwigi1410/Text-to-ascii-encoder" target="_blank">Source code</a></p>
 
     <!-- GitHub Badges -->
     <div class="badges">
-      <a href="https://github.com/Szerwigi1410/brokefetch" target="_blank">
-        <img src="https://img.shields.io/github/stars/Szerwigi1410/brokefetch?style=for-the-badge" alt="GitHub stars">
+      <a href="https://github.com/Szerwigi1410/Text-to-ascii-encoder" target="_blank">
+        <img src="https://img.shields.io/github/stars/Szerwigi1410/Text-to-ascii-encoder?style=for-the-badge" alt="GitHub stars">
       </a>
-      <a href="https://github.com/Szerwigi1410/brokefetch/forks" target="_blank">
-        <img src="https://img.shields.io/github/forks/Szerwigi1410/brokefetch?style=for-the-badge" alt="GitHub forks">
+      <a href="https://github.com/Szerwigi1410/Text-to-ascii-encoder/forks" target="_blank">
+        <img src="https://img.shields.io/github/forks/Szerwigi1410/Text-to-ascii-encoder?style=for-the-badge" alt="GitHub forks">
       </a>
-      <a href="https://github.com/Szerwigi1410/brokefetch/issues" target="_blank">
-        <img src="https://img.shields.io/github/issues/Szerwigi1410/brokefetch?style=for-the-badge" alt="Open issues">
+      <a href="https://github.com/Szerwigi1410/Text-to-ascii-encoder/issues" target="_blank">
+        <img src="https://img.shields.io/github/issues/Szerwigi1410/Text-to-ascii-encoder?style=for-the-badge" alt="Open issues">
       </a>
       <!-- GitHub Top Language Badge -->
-<a href="https://github.com/Szerwigi1410/brokefetch" target="_blank">
-  <img src="https://img.shields.io/github/languages/top/Szerwigi1410/brokefetch" alt="GitHub top language">
+<a href="https://github.com/Szerwigi1410/Text-to-ascii-encoder" target="_blank">
+  <img src="https://img.shields.io/github/languages/top/Szerwigi1410/Text-to-ascii-encoder" alt="GitHub top language">
 </a>
 
 <!-- Static Made With Badge -->
@@ -53,17 +53,10 @@
     <h3>Option 1 — Script</h3>
     <p>Download and run the install script:</p>
     <div class="cmd-row">
-      <div class="code" id="scriptCmd">bash <(curl -fsSL https://raw.githubusercontent.com/aserdevyt/aserdev-repo/refs/heads/main/install.sh) && sudo pacman -Sy brokefetch</div>
+      <div class="code" id="scriptCmd">bash <(curl -fsSL https://raw.githubusercontent.com/aserdevyt/aserdev-repo/refs/heads/main/install.sh) && sudo pacman -Sy ascii-enc</div>
       <button class="copy" onclick="copyText('scriptCmd', this)">Copy</button>
     </div>
 
-    <h2>Screenshots / Logos</h2>
-    <div class="grid">
-      <div class="os"><img src="images/windows.png" alt="Windows"><div>Windows</div></div>
-      <div class="os"><img src="images/arch.png" alt="Arch"><div>Arch</div></div>
-      <div class="os"><img src="images/aserdev.png" alt="Aserdev"><div>Aserdev</div></div>
-      <div class="os"><img src="images/debian.png" alt="Debian"><div>Debian</div></div>
-    </div>
 
     <footer style="margin-top:28px; padding-top:18px; border-top:1px solid rgba(255,255,255,0.04); display:flex; gap:12px; align-items:center; justify-content:space-between; flex-wrap:wrap">
       <div style="color:#cbd5e1">&copy; 2025 Aserdev</div>
