modified:   other-projects/ash-shell/index.html 	modified:   other-projects/index.html

--- a/other-projects/ash-shell/index.html
+++ b/other-projects/ash-shell/index.html
@@ -108,22 +108,75 @@
     <a href="https://github.com/aserdevyt/ash-shell" target="_blank">Source code</a></p>
 
     <!-- GitHub Badges -->
-    <div class="badges">
-      <a href="https://github.com/aserdevyt/ash-shell" target="_blank">
-        <img src="https://img.shields.io/github/stars/aserdevyt/ash-shell?style=for-the-badge" alt="GitHub stars">
-      </a>
-      <a href="https://github.com/aserdevyt/ash-shell/forks" target="_blank">
-        <img src="https://img.shields.io/github/forks/aserdevyt/ash-shell?style=for-the-badge" alt="GitHub forks">
-      </a>
-      <a href="https://github.com/aserdevyt/ash-shell/issues" target="_blank">
-        <img src="https://img.shields.io/github/issues/aserdevyt/ash-shell?style=for-the-badge" alt="Open issues">
-      </a>
-      <!-- GitHub Top Language Badge -->
-      <a href="https://github.com/aserdevyt/ash-shell" target="_blank">
-        <img src="https://img.shields.io/github/languages/top/aserdevyt/ash-shell" alt="GitHub top language">
-      </a>
+<!-- Project Badges -->
+<div class="badges">
+  <!-- AUR -->
+  <a href="https://aur.archlinux.org/packages/ash-shell-git" target="_blank">
+    <img src="https://img.shields.io/aur/version/ash-shell-git?style=for-the-badge" alt="AUR version">
+  </a>
+  <a href="https://aur.archlinux.org/packages/ash-shell-git" target="_blank">
+    <img src="https://img.shields.io/aur/votes/ash-shell-git?style=for-the-badge" alt="AUR votes">
+  </a>
 
-    </div>
+  <!-- License -->
+  <a href="https://github.com/aserdevyt/ash-shell/blob/main/LICENSE" target="_blank">
+    <img src="https://img.shields.io/github/license/aserdevyt/ash-shell?style=for-the-badge" alt="License">
+  </a>
+
+  <!-- Languages -->
+  <a href="https://github.com/aserdevyt/ash-shell" target="_blank">
+    <img src="https://img.shields.io/github/languages/top/aserdevyt/ash-shell?style=for-the-badge" alt="Top language">
+  </a>
+  <a href="https://github.com/aserdevyt/ash-shell" target="_blank">
+    <img src="https://img.shields.io/github/languages/count/aserdevyt/ash-shell?style=for-the-badge" alt="Languages count">
+  </a>
+
+  <!-- Code Stats -->
+  <a href="https://github.com/aserdevyt/ash-shell" target="_blank">
+    <img src="https://img.shields.io/tokei/lines/github/aserdevyt/ash-shell?style=for-the-badge" alt="Lines of code">
+  </a>
+  <a href="https://github.com/aserdevyt/ash-shell" target="_blank">
+    <img src="https://img.shields.io/github/repo-size/aserdevyt/ash-shell?style=for-the-badge" alt="Repo size">
+  </a>
+
+  <!-- Activity -->
+  <a href="https://github.com/aserdevyt/ash-shell/commits/main" target="_blank">
+    <img src="https://img.shields.io/github/last-commit/aserdevyt/ash-shell?style=for-the-badge" alt="Last commit">
+  </a>
+  <a href="https://github.com/aserdevyt/ash-shell/commits/main" target="_blank">
+    <img src="https://img.shields.io/github/commit-activity/m/aserdevyt/ash-shell?style=for-the-badge" alt="Commit activity">
+  </a>
+
+  <!-- Contributors -->
+  <a href="https://github.com/aserdevyt/ash-shell/graphs/contributors" target="_blank">
+    <img src="https://img.shields.io/github/contributors/aserdevyt/ash-shell?style=for-the-badge" alt="Contributors">
+  </a>
+
+  <!-- Issues -->
+  <a href="https://github.com/aserdevyt/ash-shell/issues" target="_blank">
+    <img src="https://img.shields.io/github/issues/aserdevyt/ash-shell?style=for-the-badge" alt="Open issues">
+  </a>
+  <a href="https://github.com/aserdevyt/ash-shell/pulls" target="_blank">
+    <img src="https://img.shields.io/github/issues-pr/aserdevyt/ash-shell?style=for-the-badge" alt="Pull requests">
+  </a>
+
+  <!-- Releases -->
+  <a href="https://github.com/aserdevyt/ash-shell/releases" target="_blank">
+    <img src="https://img.shields.io/github/v/release/aserdevyt/ash-shell?include_prereleases&style=for-the-badge" alt="Releases">
+  </a>
+
+  <!-- Social -->
+  <a href="https://github.com/aserdevyt/ash-shell/stargazers" target="_blank">
+    <img src="https://img.shields.io/github/stars/aserdevyt/ash-shell?style=social" alt="GitHub stars">
+  </a>
+  <a href="https://github.com/aserdevyt/ash-shell/network/members" target="_blank">
+    <img src="https://img.shields.io/github/forks/aserdevyt/ash-shell?style=social" alt="GitHub forks">
+  </a>
+  <a href="https://github.com/aserdevyt/ash-shell/watchers" target="_blank">
+    <img src="https://img.shields.io/github/watchers/aserdevyt/ash-shell?style=social" alt="GitHub watchers">
+  </a>
+</div>
+
 
     <h2>Install Options</h2>
     <h3>Option 1 — pacman</h3>
