--- a/other-projects/index.html
+++ b/other-projects/index.html
@@ -162,12 +162,12 @@
 			<div class="project-card">
 				<h2>ash-shell</h2>
 				<p>A simple, fast, and scriptable shell written in C.</p>
-				<a href="/other-projects/ash-shell/" target="_blank">details</a>
+				<a href="/other-projects/ash-shell/" >details</a>
 			</div>
 				<div class="project-card">
 				<h2>text->ascii encoder</h2>
 				<p>A simple tool to convert text to ASCII values by <a href="https://github.com/Szerwigi1410/" target="_blank">Szerwigi1410</a>.</p>
-				<a href="/other-projects/text-to-ascii/" target="_blank">Details</a>
+				<a href="/other-projects/text-to-ascii/">Details</a>
 			</div>
 		</div>
 	</div>
