modified:   other-projects/brokefetch/index.html

--- a/other-projects/brokefetch/index.html
+++ b/other-projects/brokefetch/index.html
@@ -49,6 +49,14 @@
 <img src="https://img.shields.io/badge/made_with-vscode%2C_nano%2C_Xcode%2C_helix-blue" alt="Made with VSCode, nano, Xcode, helix">
     </div>
 
+    
+    <h4>the only fetch tool that doesn't pretend that everything is okay</h4>
+    <p>inspired by <a href="https://github.com/dylanaraps/neofetch">Neofetch</a> but with</p>
+    <ul>
+      <li>Sadness</li>
+      <li>Regret</li>
+      <li>A CRT monitor</li>
+    </ul>
     <h2>Install Options</h2>
     <h3>Option 1 — Script</h3>
     <p>Download and run the install script:</p>
@@ -64,9 +72,10 @@
       <div class="os"><img src="/other-projects/images/brokefetch/aserdev.png" alt="Aserdev"><div>Aserdev</div></div>
       <div class="os"><img src="/other-projects/images/brokefetch/debian.png" alt="Debian"><div>Debian</div></div>
     </div>
-
+          <p>why choose fastfetch when you are brokefetch -<a href="https://github.com/aserdevyt/">aserdev</a></p>
     <footer style="margin-top:28px; padding-top:18px; border-top:1px solid rgba(255,255,255,0.04); display:flex; gap:12px; align-items:center; justify-content:space-between; flex-wrap:wrap">
       <div style="color:#cbd5e1">&copy; 2025 Aserdev</div>
+
       <div class="footer-buttons" style="display:flex; gap:12px;">
         <a class="footer-button" href="/LICENSE" target="_blank">License</a>
         <a class="footer-button" href="https://github.com/aserdevyt/aserdevyt.github.io" target="_blank">Source Code</a>
